# ProjectGroundStation

./: README.md  pyproject.toml
StormEngine/: __init__.py  decoder.ipynb  decoder.py  encoder.ipynb  encoder.py  pipeline.ipynb  pipeline.py  processor.ipynb
examples/: run_demo.py
processor_rs/: Cargo.toml
processor_rs/src/: lib.rs
